Static var tests

--- a/Lec1.vcxproj
+++ b/Lec1.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Pasta.cpp" />
     <ClCompile Include="Pizza.cpp" />
     <ClCompile Include="Soup.cpp" />
+    <ClCompile Include="tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dish.h" />
